[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Leaderboard.gd" type="Script" id=1]
[ext_resource path="res://Textures/Background.png" type="Texture" id=2]
[ext_resource path="res://611Bit.tres" type="DynamicFont" id=3]

[node name="LeaderboardCanvas" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="LeaderboardDisplay" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_right = -64.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Leaderboard" type="RichTextLabel" parent="Background/LeaderboardDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_bottom = -64.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
bbcode_enabled = true
bbcode_text = "[center]Loading..."
text = "Loading..."

[node name="Help" type="Label" parent="Background/LeaderboardDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 3 )
text = "Press space to exit"
align = 1
valign = 2
autowrap = true
clip_text = true

[node name="NameInputLabel" type="Label" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
text = "Enter name for leaderboard

_"
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
